2024-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp (getFutureDate): New helper function
	* inst/include/rquantlib_internal.h: Declaration
	* src/asian.cpp: Use new helper function
	* src/barrier_binary.cpp: Idem
	* src/implieds.cpp Idem
	* src/vanilla.cpp: Idem

	* inst/include/rquantlib_internal.h: Move qlext namespace defintion

2024-07-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/asian.cpp: Minor refactoring and C++ update
	* src/barrier_binary.cpp: Idem
	* src/discount.cpp: Idem
	* src/hullwhite.cpp: Idem
	* src/implieds.cpp Idem
	* src/vanilla.cpp: Idem
	* src/zero.cpp: Idem

2024-07-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* src/vanilla.cpp (europeanOptionEngine): Update dividend case to
	(initially deprecated, now removed) changes in upstream QuantLib

	* src/utils.cpp: Update to Euribor* deprecation, conditional on
	using QuantLb 1.35 or later

	* README.md: Update three URLs

2024-05-25  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-04-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.22
	* configure.ac: Idem
	* configure: Idem

2024-04-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* src/bonds.cpp: Use QuantLib::Bond::Price in yield calculation
	* src/zero.cpp: Use QuantLib::Bond::Price in yield calculation

	* R/zzz.R (.onAttach):e Protect version comparison from possible '-rc'
	in release candidate builds
	* inst/tinytest/test_schedule.R: Idem

2024-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* src/Makevars.in (PKG_CXXFLAGS): No longer need -DBOOST_NO_AUTO_PTR

2024-03-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* R/asian.R: Remove three redundant duplicate methods available via